# thebook

./: .gitignore  CONVENTIONS.md  README.md  _macros.qmd  _quarto.yml  index.qmd  pyproject.toml  references.bib  theme-dark.scss  theme.scss
.github/workflows/: publish.yml
appendices/: A-notation.qmd  B-math-background.qmd  C-reference-implementation.qmd
chapters/: 01-language-modelling.qmd  02-tokenization.qmd  03-embeddings.qmd  04-attention-as-gnn.qmd  05-attention.qmd  06-positional-information.qmd  07-mlp-activations.qmd  08-normalization-residual.qmd  09-the-transformer.qmd  10-objective-optimization.qmd  11-hardware-lottery.qmd  12-systems-at-scale.qmd  13-data.qmd  14-scaling-laws.qmd  15-state-space-mamba.qmd  16-linear-attention-recurrence.qmd  17-mixture-of-experts.qmd  18-outlook.qmd
src/thebook/: __init__.py  attention.py  model.py  tokenizer.py  train.py
tex/: preamble.tex
