[project]
name = "thebook"
version = "0.0.0"
description = "Companion code for a book on language-model pretraining."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
]

[dependency-groups]
# Tools for rendering the book and running notebooks: `uv sync --group render`.
render = [
    "jupyter>=1.0",
    "jupyter-cache>=1.0",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thebook"]

[tool.ruff]
line-length = 100
